cmake_minimum_required(VERSION 3.3)
project(teleport)

set(CMAKE_CXX_FLAGS "-O3 ${CMAKE_CXX_FLAGS} -std=c++11 -lboost_system -DSCRYPT_SALSA64 -DSCRYPT_BLAKE512 -lssl -lboost_thread -pthread")

add_subdirectory(test)
add_subdirectory(test/teleport_tests)
add_subdirectory(test/lib/googlemock)

include_directories(test/lib/googletest/include
        test/lib/googletest
        test/lib/googlemock/include
        test/lib/googlemock
        .
        src/leveldb/include
        src/leveldb/helpers/memenv
        src/leveldb
        src)

set(NET_FILES
        src/net/addrman.cpp
        src/net/addrman.h
        src/net/net.cpp
        src/net/net.h
        src/net/netbase.cpp
        src/net/netbase.h
        src/net/net_caddrdb.cpp
        src/net/net_cnode.cpp
        src/net/net_relay.cpp
        src/net/net_cnode.h
        src/net/net_relay.h
        src/net/net_caddrdb.h
        src/net/net_services.cpp
        src/net/net_services.h
        src/net/net_externalip.cpp
        src/net/net_externalip.h
        src/net/net_sockets.h
        src/net/net_sockets.cpp
        src/net/net_connections.h
        src/net/net_connections.cpp
        src/net/net_cnetmessage.cpp
        src/net/net_cnetmessage.h
        src/net/net_addresses.cpp
        src/net/net_addresses.h
        src/net/net_startstop.cpp
        src/net/net_startstop.h
        src/net/net_messagehandler.cpp
        src/net/net_messagehandler.h
        src/net/net_cleanup.cpp
        src/net/net_sync.h
        src/net/net_sync.cpp
        src/net/net_upnp.cpp)

set(MESSAGING_FILES
        ${NET_FILES}
        src/teleportnode/main.h
        src/teleportnode/main_signals.cpp
        src/teleportnode/main_send_messages.cpp
        src/teleportnode/main_process_messages.cpp
        src/teleportnode/MockInit.h
        src/teleportnode/MockInit.cpp
        test/teleport_tests/main_tests/Communicator.cpp
        test/teleport_tests/main_tests/Communicator.h)

set(LEVELDB_FILES
        src/leveldb/util/arena.cc
        src/leveldb/util/options.cc
        src/leveldb/util/coding.cc
        src/leveldb/util/hash.h
        src/leveldb/util/status.cc
        src/leveldb/util/testharness.h
        src/leveldb/util/bloom.cc
        src/leveldb/util/cache.cc
        src/leveldb/util/histogram.cc
        src/leveldb/util/testutil.cc
        src/leveldb/util/testutil.h
        src/leveldb/util/coding.h
        src/leveldb/util/filter_policy.cc
        src/leveldb/util/crc32c.h
        src/leveldb/util/comparator.cc
        src/leveldb/util/posix_logger.h
        src/leveldb/util/crc32c.cc
        src/leveldb/util/arena.h
        src/leveldb/util/env_posix.cc
        src/leveldb/util/mutexlock.h
        src/leveldb/util/logging.cc
        src/leveldb/util/hash.cc
        src/leveldb/util/random.h
        src/leveldb/util/histogram.h
        src/leveldb/util/env.cc
        src/leveldb/util/logging.h
        src/leveldb/util/testharness.cc
        src/leveldb/include/leveldb/comparator.h
        src/leveldb/include/leveldb/c.h
        src/leveldb/include/leveldb/table.h
        src/leveldb/include/leveldb/table_builder.h
        src/leveldb/include/leveldb/dumpfile.h
        src/leveldb/include/leveldb/env.h
        src/leveldb/include/leveldb/slice.h
        src/leveldb/include/leveldb/filter_policy.h
        src/leveldb/include/leveldb/options.h
        src/leveldb/include/leveldb/status.h
        src/leveldb/include/leveldb/write_batch.h
        src/leveldb/include/leveldb/iterator.h
        src/leveldb/include/leveldb/db.h
        src/leveldb/include/leveldb/cache.h
        src/leveldb/helpers/memenv/memenv.cc
        src/leveldb/helpers/memenv/memenv.h
        src/leveldb/db/filename.h
        src/leveldb/db/db_iter.cc
        src/leveldb/db/snapshot.h
        src/leveldb/db/dbformat.cc
        src/leveldb/db/version_edit.h
        src/leveldb/db/version_set.cc
        src/leveldb/db/dbformat.h
        src/leveldb/db/skiplist.h
        src/leveldb/db/log_writer.h
        src/leveldb/db/write_batch_internal.h
        src/leveldb/db/filename.cc
        src/leveldb/db/version_edit.cc
        src/leveldb/db/version_set.h
        src/leveldb/db/c.cc
        src/leveldb/db/db_impl.cc
        src/leveldb/db/db_impl.h
        src/leveldb/db/builder.cc
        src/leveldb/db/log_writer.cc
        src/leveldb/db/db_iter.h
        src/leveldb/db/table_cache.cc
        src/leveldb/db/builder.h
        src/leveldb/db/write_batch.cc
        src/leveldb/db/log_reader.h
        src/leveldb/db/log_reader.cc
        src/leveldb/db/memtable.h
        src/leveldb/db/memtable.cc
        src/leveldb/db/table_cache.h
        src/leveldb/db/repair.cc
        src/leveldb/db/log_format.h
        src/leveldb/db/dumpfile.cc
        src/leveldb/port/port.h
        src/leveldb/port/win/stdint.h
        src/leveldb/port/thread_annotations.h
        src/leveldb/port/port_posix.cc
        src/leveldb/port/port_example.h
        src/leveldb/port/port_posix.h
        src/leveldb/port/atomic_pointer.h
        src/leveldb/table/filter_block.h
        src/leveldb/table/block_builder.cc
        src/leveldb/table/block.h
        src/leveldb/table/two_level_iterator.cc
        src/leveldb/table/filter_block.cc
        src/leveldb/table/block.cc
        src/leveldb/table/merger.cc
        src/leveldb/table/format.h
        src/leveldb/table/merger.h
        src/leveldb/table/iterator.cc
        src/leveldb/table/table.cc
        src/leveldb/table/iterator_wrapper.h
        src/leveldb/table/table_builder.cc
        src/leveldb/table/format.cc
        src/leveldb/table/block_builder.h
        src/leveldb/table/two_level_iterator.h)

set(MEMORY_DATASTORE_FILES
        test/teleport_tests/teleport_data/MemoryObject.cpp
        test/teleport_tests/teleport_data/MemoryObject.h
        test/teleport_tests/teleport_data/MemoryProperty.cpp
        test/teleport_tests/teleport_data/MemoryProperty.h
        test/teleport_tests/teleport_data/MemoryData.cpp
        test/teleport_tests/teleport_data/MemoryData.h
        test/teleport_tests/teleport_data/MemoryLocationIterator.cpp
        test/teleport_tests/teleport_data/MemoryLocationIterator.h
        test/teleport_tests/teleport_data/MemoryDimension.cpp
        test/teleport_tests/teleport_data/MemoryDimension.h
        test/teleport_tests/teleport_data/MemoryDataStore.cpp
        test/teleport_tests/teleport_data/MemoryLocation.cpp
        test/teleport_tests/teleport_data/MemoryLocation.h
        )

set(DATASTORE_FILES
        ${LEVELDB_FILES}
        src/leveldbwrapper.cpp
        src/leveldbwrapper.h
        ${MEMORY_DATASTORE_FILES}
        src/database/DiskDataStore.h
        test/teleport_tests/teleport_data/DataStore.cpp
        test/teleport_tests/teleport_data/DataStore.h
        test/teleport_tests/teleport_data/DataObject.cpp
        test/teleport_tests/teleport_data/DataObject.h
        test/teleport_tests/teleport_data/DataProperty.cpp
        test/teleport_tests/teleport_data/DataProperty.h
        test/teleport_tests/teleport_data/DataLocation.cpp
        test/teleport_tests/teleport_data/DataLocation.h
        test/teleport_tests/teleport_data/LocationIterator.cpp
        test/teleport_tests/teleport_data/LocationIterator.h)

set(DATABASE_FILES
        ${DATASTORE_FILES}
        src/database/memdb.h)

set(BASE_FILES
        src/base/allocators.cpp
        src/base/allocators.h
        src/base/base58.cpp
        src/base/base58.h
        src/base/chainparams.cpp
        src/base/chainparams.h
        src/base/clientversion.h
        src/base/core.cpp
        src/base/core.h
        src/base/limitedmap.h
        src/base/mruset.h
        src/base/noui.cpp
        src/base/noui.h
        src/base/protocol.h
        src/base/serialize.h
        src/base/sync.cpp
        src/base/sync.h
        src/base/threadsafety.h
        src/base/tinyformat.h
        src/base/ui_interface.h
        src/base/util.cpp
        src/base/util_log.cpp
        src/base/util.h
        src/base/version.cpp
        src/base/version.h)

SET(REMAINING_BASE_FILES
        src/base/allocators.cpp
        src/base/allocators.h
        src/base/base58.cpp
        src/base/base58.h
        src/base/base64.cpp
        src/base/base64.h
        src/base/clientversion.h
        src/base/chainparams.cpp
        src/base/limitedmap.h
        src/base/mruset.h
        src/base/noui.cpp
        src/base/noui.h
        src/base/protocol.h
        src/base/protocol.cpp
        src/base/serialize.h
        src/base/sync.cpp
        src/base/sync.h
        src/base/threadsafety.h
        src/base/tinyformat.h
        src/base/ui_interface.h
        src/base/util.h
        src/base/version.cpp
        src/base/version.h
        src/base/util_log.cpp
        src/base/util_file.cpp
        src/base/util_args.cpp
        src/base/util_money.cpp
        src/base/util_data.cpp
        src/base/util_pid.cpp
        src/base/util_rand.cpp
        src/base/util_time.cpp
        src/net/netbase.cpp
        src/base/util_format.cpp
        src/base/util_init.cpp
        src/base/util_init.h
        src/base/util_log.h
        src/base/util_time.h
        src/base/util_hex.cpp
        src/base/util_hex.h
        src/base/util_rand.h
        src/base/util_format.h
        src/base/util_file.h
        src/base/util_data.h
        src/base/util_args.h
        src/base/util_compare.h)

set(MINCRYPTO_FILES
        src/crypto/25519/curve25519-donna-32bit.h
        src/crypto/25519/curve25519-donna-64bit.h
        src/crypto/25519/curve25519-donna-helpers.h
        src/crypto/25519/curve25519-donna-sse2.h
        src/crypto/25519/ed25519-donna-32bit-sse2.h
        src/crypto/25519/ed25519-donna-32bit-tables.h
        src/crypto/25519/ed25519-donna-64bit-sse2.h
        src/crypto/25519/ed25519-donna-64bit-tables.h
        src/crypto/25519/ed25519-donna-64bit-x86-32bit.h
        src/crypto/25519/ed25519-donna-64bit-x86.h
        src/crypto/25519/ed25519-donna-basepoint-table.h
        src/crypto/25519/ed25519-donna-batchverify.h
        src/crypto/25519/ed25519-donna-impl-base.h
        src/crypto/25519/ed25519-donna-impl-sse2.h
        src/crypto/25519/ed25519-donna-portable-identify.h
        src/crypto/25519/ed25519-donna-portable.h
        src/crypto/25519/ed25519-donna.h
        src/crypto/25519/ed25519-hash-custom.h
        src/crypto/25519/ed25519-hash.h
        src/crypto/25519/ed25519-randombytes-custom.h
        src/crypto/25519/ed25519-randombytes.h
        src/crypto/25519/ed25519.cpp
        src/crypto/25519/ed25519.h
        src/crypto/25519/modm-donna-32bit.h
        src/crypto/25519/modm-donna-64bit.h
        src/crypto/25519/regression.h
        src/crypto/25519points.h
        src/crypto/bignum.h
        src/crypto/hash.cpp
        src/crypto/hash.h
        src/crypto/hashtrees.h
        src/crypto/point.cpp
        src/crypto/point.h
        src/crypto/polynomial.cpp
        src/crypto/polynomial.h
        src/crypto/secp256k1point.h
        src/crypto/shorthash.h
        src/crypto/signature.h
        src/crypto/uint256.h)

set(CRYPTO_FILES
        ${MINCRYPTO_FILES}
        src/crypto/teleportcrypto.cpp
        src/crypto/teleportcrypto.h
        test/teleport_tests/crypto/DistributedSecret.cpp
        test/teleport_tests/crypto/DistributedSecret.h
        test/teleport_tests/crypto/EncryptedSecret.cpp
        test/teleport_tests/crypto/EncryptedSecret.h)

set(WORK_FILES
        src/mining/work.cpp
        src/mining/work.h
        src/twist/code/scrypt-conf.h
        src/twist/code/scrypt-jane-chacha.h
        src/twist/code/scrypt-jane-hash.h
        src/twist/code/scrypt-jane-hash_blake256.h
        src/twist/code/scrypt-jane-hash_blake512.h
        src/twist/code/scrypt-jane-hash_keccak.h
        src/twist/code/scrypt-jane-hash_sha256.h
        src/twist/code/scrypt-jane-hash_sha512.h
        src/twist/code/scrypt-jane-hash_skein512.h
        src/twist/code/scrypt-jane-mix_chacha-avx.h
        src/twist/code/scrypt-jane-mix_chacha-sse2.h
        src/twist/code/scrypt-jane-mix_chacha-ssse3.h
        src/twist/code/scrypt-jane-mix_chacha-xop.h
        src/twist/code/scrypt-jane-mix_chacha.h
        src/twist/code/scrypt-jane-mix_salsa-avx.h
        src/twist/code/scrypt-jane-mix_salsa-sse2.h
        src/twist/code/scrypt-jane-mix_salsa-xop.h
        src/twist/code/scrypt-jane-mix_salsa.h
        src/twist/code/scrypt-jane-mix_salsa64-avx.h
        src/twist/code/scrypt-jane-mix_salsa64-avx2.h
        src/twist/code/scrypt-jane-mix_salsa64-sse2.h
        src/twist/code/scrypt-jane-mix_salsa64-ssse3.h
        src/twist/code/scrypt-jane-mix_salsa64-xop.h
        src/twist/code/scrypt-jane-mix_salsa64.h
        src/twist/code/scrypt-jane-pbkdf2.h
        src/twist/code/scrypt-jane-portable-x86.h
        src/twist/code/scrypt-jane-portable.h
        src/twist/code/scrypt-jane-romix-basic.h
        src/twist/code/scrypt-jane-romix.h
        src/twist/code/scrypt-jane-salsa.h
        src/twist/code/scrypt-jane-salsa64.h
        src/twist/code/scrypt-jane-test-vectors.h
        src/twist/code/twist-romix.h
        src/twist/code/twist-salsa64.h
        src/twist/code/twist-template.h
        src/twist/alloc.h
        src/twist/scrypt-jane-twist.h
        src/twist/twist-jane.h
        src/twist/twist.h
        src/twist/twistcpp.h)


set(CREDITS_FILES
        ${WORK_FILES}
        src/credits/Credit.cpp
        src/credits/Credit.h
        src/credits/CreditInBatch.cpp
        src/credits/CreditInBatch.h
        src/credits/CreditBatch.cpp
        src/credits/CreditBatch.h
        src/credits/UnsignedTransaction.cpp
        src/credits/UnsignedTransaction.h
        src/vector_tools.h
        src/credits/SignedTransaction.cpp
        src/credits/SignedTransaction.h
        src/credits/creditsign.h)

set(NEW_CREDITS_FILES
        ${WORK_FILES}
        src/crypto/key.h
        src/crypto/key.cpp
        src/base/BitcoinAddress.cpp
        src/base/BitcoinAddress.h
        src/credits/Credit.cpp
        src/credits/Credit.h
        src/credits/CreditInBatch.cpp
        src/credits/CreditInBatch.h
        src/credits/CreditBatch.cpp
        src/credits/CreditBatch.h
        src/credits/UnsignedTransaction.cpp
        src/credits/UnsignedTransaction.h
        src/vector_tools.h
        src/credits/SignedTransaction.cpp
        src/credits/SignedTransaction.h
        src/credits/creditsign.h
        test/teleport_tests/node/testCreditSystem.cpp
        test/teleport_tests/node/CreditSystem.cpp
        test/teleport_tests/node/CreditSystem.h
        test/teleport_tests/node/testMinedCreditMessageValidator.cpp
        test/teleport_tests/node/credit_handler/MinedCreditMessageValidator.cpp
        test/teleport_tests/node/credit_handler/MinedCreditMessageValidator.h
        test/teleport_tests/node/testTransactionValidator.cpp
        test/teleport_tests/node/credit_handler/TransactionValidator.cpp
        test/teleport_tests/node/credit_handler/TransactionValidator.h
        test/teleport_tests/node/testDiurn.cpp
        test/teleport_tests/node/calendar/Diurn.cpp
        test/teleport_tests/node/calendar/Diurn.h
        test/teleport_tests/node/testCalendar.cpp
        test/teleport_tests/node/calendar/Calendar.cpp
        test/teleport_tests/node/calendar/Calendar.h
        test/teleport_tests/node/testCalend.cpp
        test/teleport_tests/node/calendar/Calend.cpp
        test/teleport_tests/node/calendar/Calend.h
        test/teleport_tests/node/testCreditMessageHandler.cpp
        test/teleport_tests/node/credit_handler/CreditMessageHandler.cpp
        test/teleport_tests/node/credit_handler/CreditMessageHandler.h
        test/teleport_tests/node/TestPeer.h
        test/teleport_tests/node/credit_handler/BadBatchMessage.cpp
        test/teleport_tests/node/credit_handler/BadBatchMessage.h
        test/teleport_tests/node/testWallet.cpp
        test/teleport_tests/node/wallet/Wallet.cpp
        test/teleport_tests/node/wallet/Wallet.h
        test/teleport_tests/node/testShortHashList.cpp
        test/teleport_tests/node/testTeleportNetworkNode.cpp
        test/teleport_tests/node/TeleportNetworkNode.cpp
        test/teleport_tests/node/TeleportNetworkNode.h)

set(DATA_HANDLER_FILES
        test/teleport_tests/node/data_handler/KnownHistoryMessage.cpp
        test/teleport_tests/node/data_handler/KnownHistoryMessage.h
        test/teleport_tests/node/data_handler/KnownHistoryDeclaration.cpp
        test/teleport_tests/node/data_handler/KnownHistoryDeclaration.h
        test/teleport_tests/node/data_handler/DiurnMessageData.cpp
        test/teleport_tests/node/data_handler/DiurnMessageData.h
        test/teleport_tests/node/data_handler/EnclosedMessageData.h
        test/teleport_tests/node/data_handler/EnclosedMessageData.cpp
        test/teleport_tests/node/data_handler/TipHandler.cpp
        test/teleport_tests/node/data_handler/TipHandler.h
        test/teleport_tests/node/data_handler/CalendarHandler.cpp
        test/teleport_tests/node/data_handler/CalendarHandler.h
        test/teleport_tests/node/data_handler/InitialDataHandler.cpp
        test/teleport_tests/node/data_handler/InitialDataHandler.h
        test/teleport_tests/node/data_handler/KnownHistoryHandler.cpp
        test/teleport_tests/node/data_handler/KnownHistoryHandler.h
        test/teleport_tests/node/data_handler/KnownHistoryRequest.cpp
        test/teleport_tests/node/data_handler/KnownHistoryRequest.h
        test/teleport_tests/node/data_handler/DiurnDataRequest.cpp
        test/teleport_tests/node/data_handler/DiurnDataRequest.h
        test/teleport_tests/node/data_handler/DiurnDataMessage.cpp
        test/teleport_tests/node/data_handler/DiurnDataMessage.h
        test/teleport_tests/node/data_handler/DiurnFailureDetails.cpp
        test/teleport_tests/node/data_handler/DiurnFailureDetails.h
        test/teleport_tests/node/data_handler/DiurnFailureMessage.cpp
        test/teleport_tests/node/data_handler/DiurnFailureMessage.h)

add_executable(runRPCTests
        test/teleport_tests/test_main.cpp
        test/teleport_tests/rpc/test_rpc.cpp)

add_executable(runCryptoTests
        test/teleport_tests/teleport_data/TestData.h
        ${REMAINING_BASE_FILES}
        test/teleport_tests/teleport_data/MemoryDataStore.cpp
        ${DATABASE_FILES}
        ${CREDITS_FILES}
        ${MINCRYPTO_FILES}
        test/teleport_tests/crypto/DistributedSecret.cpp
        test/teleport_tests/crypto/DistributedSecret.h
        test/teleport_tests/crypto/EncryptedSecret.cpp
        test/teleport_tests/crypto/EncryptedSecret.h
        test/teleport_tests/test_main.cpp
        test/teleport_tests/crypto/test_point.cpp
        test/teleport_tests/crypto/test_secret.cpp)

add_executable(runTwistWorkProofTests
        test/teleport_tests/teleport_data/TestData.h
        ${REMAINING_BASE_FILES}
        ${MINCRYPTO_FILES}
        test/teleport_tests/teleport_data/MemoryDataStore.cpp
        ${DATABASE_FILES}
        ${WORK_FILES}
        test/teleport_tests/test_main.cpp
        test/teleport_tests/mining/testTwistWorkProof.cpp)

add_executable(runNetworkSpecificProofOfWorkTests
        ${REMAINING_BASE_FILES}
        ${MINCRYPTO_FILES}
        ${WORK_FILES}
        test/teleport_tests/test_main.cpp
        test/teleport_tests/mining/MiningHashTree.cpp
        test/teleport_tests/mining/MiningHashTree.h
        test/teleport_tests/mining/testNetworkSpecificProofOfWork.cpp
        test/teleport_tests/mining/NetworkSpecificProofOfWork.cpp
        test/teleport_tests/mining/NetworkSpecificProofOfWork.h)

add_executable(runMiningTests
        ${WORK_FILES}
        test/teleport_tests/test_main.cpp
        test/teleport_tests/mining/test_mining.cpp
        test/teleport_tests/mining/TeleportMiner.cpp
        test/teleport_tests/mining/TeleportMiner.h
        test/teleport_tests/mining/NetworkMiningInfo.cpp
        test/teleport_tests/mining/NetworkMiningInfo.h
        test/teleport_tests/mining/MiningHashTree.cpp
        test/teleport_tests/mining/MiningHashTree.h
        test/teleport_tests/mining/testMiningRPCServer.cpp
        test/teleport_tests/mining/MiningRPCServer.cpp
        test/teleport_tests/mining/MiningRPCServer.h
        test/teleport_tests/mining/testNetworkSpecificProofOfWork.cpp
        test/teleport_tests/mining/NetworkSpecificProofOfWork.cpp
        test/teleport_tests/mining/NetworkSpecificProofOfWork.h
        test/teleport_tests/mining/server_key.h
        test/teleport_tests/node/server/HttpAuthServer.cpp
        test/teleport_tests/node/server/HttpAuthServer.h)

add_executable(minerd
        ${WORK_FILES}
        test/teleport_tests/mining/TeleportMiner.cpp
        test/teleport_tests/mining/TeleportMiner.h
        test/teleport_tests/mining/NetworkMiningInfo.cpp
        test/teleport_tests/mining/NetworkMiningInfo.h
        test/teleport_tests/mining/MiningHashTree.cpp
        test/teleport_tests/mining/MiningHashTree.h
        test/teleport_tests/mining/MiningRPCServer.cpp
        test/teleport_tests/mining/MiningRPCServer.h
        test/teleport_tests/mining/NetworkSpecificProofOfWork.cpp
        test/teleport_tests/mining/NetworkSpecificProofOfWork.h
        test/teleport_tests/mining/minerd.cpp
        test/teleport_tests/node/server/HttpAuthServer.cpp
        test/teleport_tests/node/server/HttpAuthServer.h)

add_executable(runSchedulerTests
        test/teleport_tests/teleport_data/TestData.h
        ${REMAINING_BASE_FILES}
        ${MINCRYPTO_FILES}
        test/teleport_tests/teleport_data/MemoryDataStore.cpp
        ${DATABASE_FILES}
        test/teleport_tests/test_main.cpp
        test/teleport_tests/scheduler/test_scheduler.cpp)

add_executable(runDataTests
        test/teleport_tests/teleport_data/TestData.h
        ${REMAINING_BASE_FILES}
        ${MINCRYPTO_FILES}
        ${DATABASE_FILES}
        test/teleport_tests/test_main.cpp
        test/teleport_tests/teleport_data/testMemoryDataStore.cpp
        test/teleport_tests/teleport_data/testDiskDataStore.cpp
        test/teleport_tests/teleport_data/testDataStore.cpp)

set(NODE_TEST_FILES
        test/teleport_tests/teleport_data/TestData.h
        ${REMAINING_BASE_FILES}
        ${MINCRYPTO_FILES}
        ${NEW_CREDITS_FILES}
        ${NET_FILES}
        test/teleport_tests/teleport_data/MemoryDataStore.cpp
        ${DATABASE_FILES}
        ${WORK_FILES}
        ${MESSAGING_FILES}
        src/teleportnode/main.cpp
        src/teleportnode/main.h
        test/teleport_tests/node/server/TeleportRPCServer.cpp
        test/teleport_tests/node/server/TeleportRPCServer.h
        test/teleport_tests/node/config/TeleportConfig.cpp
        test/teleport_tests/node/config/TeleportConfig.h
        test/teleport_tests/node/config/TeleportConfigDefaults.h
        test/teleport_tests/node/config/ConfigParser.cpp
        test/teleport_tests/node/config/ConfigParser.h
        test/teleport_tests/node/server/TeleportLocalServer.cpp
        test/teleport_tests/node/server/TeleportLocalServer.h
        src/base/base58.cpp
        src/base/base58.h
        test/teleport_tests/node/server/HttpAuthServer.cpp
        test/teleport_tests/node/server/HttpAuthServer.h
        test/teleport_tests/mining/TeleportMiner.cpp
        test/teleport_tests/mining/TeleportMiner.h
        test/teleport_tests/mining/NetworkMiningInfo.cpp
        test/teleport_tests/mining/NetworkMiningInfo.h
        test/teleport_tests/mining/MiningHashTree.cpp
        test/teleport_tests/mining/MiningHashTree.h
        test/teleport_tests/mining/MiningRPCServer.cpp
        test/teleport_tests/mining/MiningRPCServer.h
        test/teleport_tests/mining/NetworkSpecificProofOfWork.cpp
        test/teleport_tests/mining/NetworkSpecificProofOfWork.h
        test/teleport_tests/node/credit_handler/MinedCreditMessage.cpp
        test/teleport_tests/node/credit_handler/MinedCreditMessage.h
        test/teleport_tests/node/MessageHandlerWithOrphanage.cpp
        test/teleport_tests/node/MessageHandlerWithOrphanage.h
        test/teleport_tests/node/data_handler/DataMessageHandler.cpp
        test/teleport_tests/node/data_handler/DataMessageHandler.h
        test/teleport_tests/node/data_handler/TipRequestMessage.cpp
        test/teleport_tests/node/data_handler/TipRequestMessage.h
        test/teleport_tests/node/data_handler/TipMessage.cpp
        test/teleport_tests/node/data_handler/TipMessage.h
        test/teleport_tests/node/data_handler/CalendarRequestMessage.cpp
        test/teleport_tests/node/data_handler/CalendarRequestMessage.h
        test/teleport_tests/node/data_handler/CalendarMessage.cpp
        test/teleport_tests/node/data_handler/CalendarMessage.h
        test/teleport_tests/node/data_handler/CalendarFailureDetails.cpp
        test/teleport_tests/node/data_handler/CalendarFailureDetails.h
        test/teleport_tests/node/data_handler/CalendarFailureMessage.cpp
        test/teleport_tests/node/data_handler/CalendarFailureMessage.h
        test/teleport_tests/node/data_handler/InitialDataRequestMessage.cpp
        test/teleport_tests/node/data_handler/InitialDataRequestMessage.h
        test/teleport_tests/node/data_handler/InitialDataMessage.cpp
        test/teleport_tests/node/data_handler/InitialDataMessage.h
        test/teleport_tests/node/TestPeerWithNetworkNode.h
        test/teleport_tests/node/credit_handler/ListExpansionRequestMessage.cpp
        test/teleport_tests/node/credit_handler/ListExpansionRequestMessage.h
        test/teleport_tests/node/credit_handler/ListExpansionMessage.cpp
        test/teleport_tests/node/credit_handler/ListExpansionMessage.h)

add_executable(runNodeTests
        ${NODE_TEST_FILES}
        ${DATA_HANDLER_FILES}
        test/teleport_tests/test_main.cpp
        test/teleport_tests/main_tests/testCommunicator.cpp
        test/teleport_tests/node/testDataMessageHandler.cpp
        test/teleport_tests/main_tests/testNetwork.cpp
        test/teleport_tests/node/testConfigParser.cpp
        test/teleport_tests/node/testTeleportLocalServer.cpp
        test/teleport_tests/node/testMessageHandlerWithOrphanage.cpp
        test/teleport_tests/node/testHttpAuthServer.cpp
        test/teleport_tests/node/testTeleportConfig.cpp
        test/teleport_tests/node/testTeleportRPCServer.cpp
        test/teleport_tests/node/testRelayState.cpp
        test/teleport_tests/node/RelayState.cpp
        test/teleport_tests/node/RelayState.h
        test/teleport_tests/node/Relay.cpp
        test/teleport_tests/node/Relay.h
        test/teleport_tests/node/RelayJoinMessage.cpp
        test/teleport_tests/node/RelayJoinMessage.h
        test/teleport_tests/node/testRelay.cpp
        test/teleport_tests/node/testRelayMessageHandler.cpp
        test/teleport_tests/node/RelayMessageHandler.cpp
        test/teleport_tests/node/RelayMessageHandler.h
        test/teleport_tests/node/testRelayJoinMessage.cpp
        test/teleport_tests/node/KeyDistributionMessage.cpp
        test/teleport_tests/node/KeyDistributionMessage.h
        test/teleport_tests/node/SecretRecoveryMessage.cpp
        test/teleport_tests/node/SecretRecoveryMessage.h
        test/teleport_tests/node/Data.h
        test/teleport_tests/node/Obituary.cpp
        test/teleport_tests/node/Obituary.h
        test/teleport_tests/node/RelayExit.cpp
        test/teleport_tests/node/RelayExit.h
        test/teleport_tests/node/testPointPrecomputation.cpp
        test/teleport_tests/node/KeyDistributionComplaint.cpp
        test/teleport_tests/node/KeyDistributionComplaint.h
        test/teleport_tests/node/DurationWithoutResponse.cpp
        test/teleport_tests/node/DurationWithoutResponse.h
        test/teleport_tests/node/DurationWithoutResponseFromRelay.cpp
        test/teleport_tests/node/DurationWithoutResponseFromRelay.h
        test/teleport_tests/node/GoodbyeMessage.cpp
        test/teleport_tests/node/GoodbyeMessage.h
        test/teleport_tests/node/GoodbyeComplaint.cpp
        test/teleport_tests/node/GoodbyeComplaint.h
        test/teleport_tests/node/SecretRecoveryComplaint.cpp
        test/teleport_tests/node/SecretRecoveryComplaint.h
        test/teleport_tests/node/testRelayPublicKeySet.cpp test/teleport_tests/node/RelayPublicKeySet.cpp test/teleport_tests/node/RelayPublicKeySet.h test/teleport_tests/node/SecretRecoveryFailureMessage.cpp test/teleport_tests/node/SecretRecoveryFailureMessage.h)

add_executable(teleportd
        test/teleport_tests/teleport_data/TestData.h
        ${NODE_TEST_FILES}
        ${DATA_HANDLER_FILES}
        test/teleport_tests/node/teleportd.cpp)

target_link_libraries(runRPCTests gmock gmock_main ssl crypto boost_system boost_program_options
        boost_filesystem boost_thread jsoncpp microhttpd jsonrpccpp-common jsonrpccpp-server jsonrpccpp-client)

target_link_libraries(runNodeTests gmock gmock_main ssl crypto boost_system boost_program_options
        boost_filesystem boost_thread jsoncpp microhttpd jsonrpccpp-common jsonrpccpp-server jsonrpccpp-client
        curl curl)

target_link_libraries(teleportd gmock gmock_main ssl crypto boost_system boost_program_options
        boost_filesystem boost_thread jsoncpp microhttpd jsonrpccpp-common jsonrpccpp-server jsonrpccpp-client
        curl curl)

target_link_libraries(runMiningTests gmock gmock_main ssl crypto boost_system boost_program_options
        boost_filesystem boost_thread jsoncpp microhttpd jsonrpccpp-common jsonrpccpp-server jsonrpccpp-client
        curl curl)

target_link_libraries(minerd ssl crypto boost_system boost_program_options
        boost_filesystem boost_thread jsoncpp microhttpd jsonrpccpp-common jsonrpccpp-server jsonrpccpp-client)

target_link_libraries(runCryptoTests gmock gmock_main ssl crypto boost_system boost_program_options
        boost_filesystem boost_thread)

target_link_libraries(runNetworkSpecificProofOfWorkTests gmock gmock_main ssl crypto boost_system boost_program_options
        boost_filesystem boost_thread)

target_link_libraries(runTwistWorkProofTests gmock gmock_main ssl crypto boost_system boost_program_options
        boost_filesystem boost_thread)

target_link_libraries(runSchedulerTests gmock gmock_main ssl crypto boost_system boost_program_options
        boost_filesystem boost_thread)

target_link_libraries(runDataTests gmock gmock_main ssl crypto boost_system boost_program_options
        boost_filesystem boost_thread)